映射关系一对一

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>mybatis_quickstart</module>
         <module>xml-mapper</module>
         <module>dynamic-sql</module>
+        <module>mybatis-mapping</module>
     </modules>
 
     <!--加入依赖-->
